--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
             <img src="images/arrow.svg" id="left-arrow" class="arrows" alt="move testimonials to the left">
             <ul class="carousal">
                 <li>
-                    <blockquote>"Nihal is a life saver. I don't have the time or money for a college education. My goal is to become a freelance web developer, and thanks to Gary, I'm really close."</blockquote>
+                    <blockquote>"Nihara is a life saver. I don't have the time or money for a college education. My goal is to become a freelance web developer, and thanks to Gary, I'm really close."</blockquote>
                     <cite>John Doe</cite>
                 </li>
                 <li>
-                    <blockquote>"Nihal is a life saver. I don't have the time or money for a college education. My goal is to become a freelance web developer, and thanks to Gary, I'm really close."</blockquote>
+                    <blockquote>"Nihara is a life saver. I don't have the time or money for a college education. My goal is to become a freelance web developer, and thanks to Gary, I'm really close."</blockquote>
                     <cite>John Doe</cite>
                 </li>
             </ul>
