--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="hero-wrapper">
         <div class="wrapper">
             <header>
-               <a href="#" class="logo">NihalAbdulla</a>
+               <a href="#" class="logo">Niyara's Cookbook Agency</a>
                <nav>
                    <ul>
                        <li><a href="index.html">Home</a></li>
